max width; add flex layout

--- a/src/app/components/biodiversity/biodiversity.component.html
+++ b/src/app/components/biodiversity/biodiversity.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Biodiversity</h1>
   <div> TODO: Bee counts, Satellite tree counts, Endangered Species counts, Light pollution</div>
   <mat-grid-list cols="2" rowHeight="350px">
