--- a/src/app/components/carbon/carbon.component.html
+++ b/src/app/components/carbon/carbon.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Carbon</h1>
   <div> TODO: Driving miles, Industrial non-renewable energy usage, Community non-renewable energy usage</div>
   <mat-grid-list cols="2" rowHeight="350px">
