--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="home is-fullheight">
+<section class="home is-fullheight" style="max-width: 1200px;">
     <div class="home-body">
         <div class="container has-text-centered">
             <p>
