--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">DAO Membership</h1>
   <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="200px"> <!--QUESTION ABOUT 350 or 200 here-->
     <mat-grid-tile [colspan]="( cardLayout | async )?.table.cols" [rowspan]="( cardLayout | async )?.table.rows">
