--- a/src/app/components/soil/soil.component.html
+++ b/src/app/components/soil/soil.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Soil</h1>
   <div> TODO: Micro and Macro organisms, Satellite Erosion, Mulching, Composting, Recycling</div>
   <mat-grid-list cols="2" rowHeight="350px">
