--- a/src/app/components/community/community.component.html
+++ b/src/app/components/community/community.component.html
@@ -1,6 +1,6 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Community</h1>
-  <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="200px">
+  <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="235px">
     <mat-grid-tile *ngFor="let mc of miniCardData" [colspan]="( cardLayout | async )?.miniCard.cols"
     [rowspan]="( cardLayout | async )?.miniCard.rows">
       <app-mini-card [icon]="mc.icon" [title]="mc.title" [value]="mc.value" [color]="mc.color" [isIncrease]="mc.isIncrease" [isPositiveTrend]="mc.isPositiveTrend" duration="since last month" [percentValue]="mc.percentValue" [isCurrency]="mc. isCurrency"></app-mini-card>
