--- a/src/app/components/culture/culture.component.html
+++ b/src/app/components/culture/culture.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Culture</h1>
   <div> TODO: Language Revitalization, Recording songs and stories</div>
   <mat-grid-list cols="2" rowHeight="350px">
