--- a/src/app/components/foodsecurity/foodsecurity.component.html
+++ b/src/app/components/foodsecurity/foodsecurity.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Food Security</h1>
   <div> TODO: Seed Banks, Bee Health</div>
   <mat-grid-list cols="2" rowHeight="350px">
