--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Settings</h1>
   <div> TODO </div>
   <mat-grid-list cols="2" rowHeight="350px">
