--- a/src/app/components/water/water.component.html
+++ b/src/app/components/water/water.component.html
@@ -1,6 +1,6 @@
-<div class="grid-container">
+<div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Water</h1>
-  <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="200px">
+  <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="235px">
     <mat-grid-tile [colspan]="( cardLayout | async )?.chart.cols" [rowspan]="( cardLayout | async )?.chart.rows">
       <app-card title="Monthly Reservoir Levels" icon="analytics">
           <app-reservoir-chart></app-reservoir-chart>
