update home page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,58 @@
-<section class="home is-fullheight" style="max-width: 1200px;">
-    <div class="home-body">
-        <div class="container has-text-centered">
+<header focusOnNavigation class="header-background"
+    aria-label="Get started" id="header">
+    <div class="header-section">
+        <div class="header-headline">
+            <h1 class="mat-h1">Dynamiculture</h1>
+            <h2>Decentralized Platform for Tracking Indigenous Environmental Projects</h2>
+        </div>
+        <div class="header-start">
+            <a mat-raised-button class="button" routerLink="/community">View Demo</a>
+        </div>
+    </div>
+</header>
+
+<main class="homepage-promo">
+    <div class="homepage-row introduction">
+        <div class="homepage-row-column">
+            <h2>Remote Sensing</h2>
             <p>
-                Distributed Autonomous Organization (DAO) template project for Indigenous tribes to track their environmental projects using satellite imagery and sensor inputs.
+                <img src="../../../assets/remotesensing.png" alt="Remote Sensing" >
+            </p>
+            <p>Monitoring ecosystems</p>
+        </div>
+        <div class="homepage-row-column">
+            <h2>Governance</h2>
+            <p>
+                <img src="../../../assets/governance.png" alt="Governance" >
             </p>
             <p>
-                Indigenous people make up 6% of the global population, while their traditional indigenous territories make up 80% of the planet’s biodiversity.
+               On-chain Governance
+            </p>
+        </div>
+        <div class="homepage-row-column">
+            <h2>Tracking</h2>
+            <p>
+                <img src="../../../assets/charting.png" alt="Chart" >
             </p>
             <p>
-                This project will enable Indigenous communities to monitor their ecosystems with remote sensing and immutable storage of data.
+               Evaluation of Community Proposals
             </p>
+        </div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="homepage-row">
+        <div>
             <p>
-                Community proposals submitted to the DAO will be evaluated on several categories selected by the members. For example, these could include:
+                Indigenous people make up 6% of the global population, while their traditional indigenous
+                territories make up 80% of the planet’s biodiversity. This platform will enable Indigenous communities to monitor their ecosystems with remote sensing and
+                immutable storage of data.
+            </p>
+            <h2>Custom Environmental Categories</h2>
+            <p>
+                Community proposals submitted to a Decentralized Autonomous Organization (DAO) will be evaluated on several categories selected by the
+                members.<br/>These could include:
             </p>
             <ul>
                 <li>Air</li>
@@ -23,15 +64,18 @@
                 <li>Water</li>
             </ul>
             <p>
-                For each category, a sub-committee will evaluate proposals and maintain the dashboard.
+                For each category, a sub-committee will evaluate proposals and maintain a category dashboard.
+            </p>
+            <h2>Ecosystem in Balance</h2>
+            <p>
+                Members can earn and trade coins associated with each category by performing services for the community, serving as a dynamic balancing mechanism for the overall ecosystem.
             </p>
             <p>
-                Members can earn and trade coins associated with each category by performing services for the community.
             </p>
-            <p>
-                Please browse the protototype dashboards that will be update by subcommittees that are charge of each
-                environnmental category.
-            </p>
-        </div>  
+        </div>
     </div>
-</section>
+</main>
+
+
+
+
