--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,9 +1,146 @@
-.home {
-    // background-image: url('/assets/pexels-harry-cooke-6805854.jpg') !important;
-    // background-size: cover;
-    // background-position: center center;
-}
-
 .home.is-fullheight {
     min-height: 100vh;
+}
+
+// The margin between two sections
+$margin-promotion-sections: 50px;
+$margin-promotion-sections-small: 15px;
+
+.header-background {
+  overflow: hidden;
+  position: relative;
+  height: 420px;
+}
+
+.header-background::before {
+  content: '';
+  position: absolute;
+  background-size: 600px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-repeat: no-repeat;
+  background-position: 80% 20px;
+  opacity: 0.2;
+}
+
+.header-section {
+  width: 90%;
+  position: absolute;
+  z-index: 0;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.header-headline {
+  h1 {
+    font-size: 56px;
+    font-weight: bold;
+    line-height: 56px;
+    margin: 15px 5px;
+  }
+
+  h2 {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 28px;
+    margin: 15px 0 25px 0;
+  }
+}
+
+.homepage-promo {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+
+  a {
+    text-decoration: none;
+  }
+
+  h2 {
+    font-size: 25px;
+    font-weight: 400;
+    margin: 16px 0;
+    padding: 0;
+  }
+
+  p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    margin: 0 0 24px 0;
+    padding: 0;
+  }
+
+  mat-divider {
+    width: 75%;
+  }
+
+  mat-icon {
+    vertical-align: middle;
+  }
+}
+
+.homepage-row {
+  width: 75%;
+  display: flex;
+  flex-direction: row;
+  margin: $margin-promotion-sections 0;
+}
+
+.homepage-row-column {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 30%;
+}
+
+.header-start {
+  text-align: center;
+  margin: $margin-promotion-sections 0 0 0;
+
+  .mat-raised-button {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .header-background {
+    height: 330px;
+  }
+  .header-background:before {
+    background-image: none;
+  }
+}
+
+@media (max-width: 850px) {
+
+  .header-background:before {
+    background-image: none;
+  }
+  .introduction {
+    flex-direction: column;
+  }
+
+  .homepage-row-column {
+    width: 100%;
+  }
+}
+
+/**
+  * Rules for when the device is detected to be a small screen.
+  */
+@media (max-width: 720px) {
+
+  .header-start {
+    margin: $margin-promotion-sections-small 0 0 0;
+  }
+
+  .homepage-row, .homepage-carousel-row {
+    margin: $margin-promotion-sections-small 0;
+  }
 }
