--- a/src/app/components/air/air.component.html
+++ b/src/app/components/air/air.component.html
@@ -1,6 +1,11 @@
 <div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Air</h1>
-  <div> TODO: Satellite Methane Detection, Air Quality Sensors, Fires</div>
-  <mat-grid-list cols="2" rowHeight="350px">
+  <div> TODO: Satellite Methane Detection, Fires</div>
+  <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="235px">
+    <mat-grid-tile [colspan]="( cardLayout | async )?.chart.cols" [rowspan]="( cardLayout | async )?.chart.rows">
+      <app-card title="Average Air Quality Levels by Year" icon="analytics">
+          <app-air-quality-chart></app-air-quality-chart>
+      </app-card>
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
