--- a/src/app/components/carbon/carbon.component.html
+++ b/src/app/components/carbon/carbon.component.html
@@ -1,6 +1,11 @@
 <div class="grid-container" style="max-width: 1200px;">
   <h1 class="mat-h1">Carbon</h1>
   <div> TODO: Driving miles, Industrial non-renewable energy usage, Community non-renewable energy usage</div>
-  <mat-grid-list cols="2" rowHeight="350px">
+  <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="235px">
+    <mat-grid-tile [colspan]="( cardLayout | async )?.chart.cols" [rowspan]="( cardLayout | async )?.chart.rows">
+      <app-card title="Solar/Wind Capacity (MW)" icon="wb_sunny">
+        <app-solar-capacity-chart></app-solar-capacity-chart>
+    </app-card>
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
