add ofcv blog post

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -64,13 +64,16 @@
                 <li>Water</li>
             </ul>
             <p>
-                For each category, a sub-committee will evaluate proposals and maintain a category dashboard.
+                For each category, a sub-committee will evaluate proposals and maintain a category dashboard. 
             </p>
             <h2>Ecosystem in Balance</h2>
             <p>
-                Members can earn and trade coins associated with each category by performing services for the community, serving as a dynamic balancing mechanism for the overall ecosystem.
+                Members can earn tokens associated with each category by performing services for the community. The tokens serve
+                as dynamic balancing mechanism for the overall ecosystem.
             </p>
+            <h2>On-chain Governance</h2>
             <p>
+                <a href="/ofcv">Off-chain Conviction Voting Blog Post and Source Code (April 1, 2021)</a>
             </p>
         </div>
     </div>
