--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -6,6 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item [routerLink]="'/home'">Home</a>
+      <a mat-list-item [routerLink]="'/ofcv'">Conviction Voting</a>
     </mat-nav-list>
 
     <p><br/></p>
