--- a/src/app/components/ofcv/ofcv.component.html
+++ b/src/app/components/ofcv/ofcv.component.html
@@ -14,6 +14,10 @@
         <div>
             <h2>Decision making on the Blockchain</h2>
             <p>
+                <img class="img-fluid" src="../../../assets/doge-dao.png" alt="Doge Dao Off-chain Voting Diagram" ><br>
+                Credit to Joel Thorstensson
+            </p>
+            <p>
                 In this <a href="https://youtu.be/I60y8daXseY?t=1891">MoneyLab Berlin talk</a>,
                 Ruth Catlow, co-founder of <a href="https://www.furtherfield.org/">Futherfield</a>, mentions
                 that most DAO (Decentralized Autonomous Organization) decisions are 
